Prikaz zemalja i liga. Modalni dijalog za prijavu na sistem.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <span>Rezultati sportova</span>
   <span class="example-spacer"></span>
   <span>Prijava</span>
-  <button mat-icon-button class="example-icon favorite-icon">
+  <button mat-icon-button class="example-icon favorite-icon" (click)="otvoriPrijavu()">
     <mat-icon>login</mat-icon>
   </button>
   <span>Registracija</span>
