Dijalozi za prijavi i registrovanje na sistem.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <mat-icon>login</mat-icon>
   </button>
   <span>Registracija</span>
-  <button mat-icon-button class="example-icon">
+  <button mat-icon-button class="example-icon favorite-icon" (click)="otvoriRegistraciju()">
     <mat-icon>how_to_reg</mat-icon>
   </button>
 </mat-toolbar>
