--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,48 +1,29 @@
-<!-- Default form login -->
 <form class="text-center border border-light p-5">
 
-  <p class="h4 mb-4">Sign in</p>
+  <p class="h4 mb-4">Prijava</p>
 
-  <!-- Email -->
-  <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
+  <mat-form-field appearance="outline" style="width: 100%;">
+    <mat-label>Email</mat-label>
+    <input matInput type="email" id="defaultLoginFormEmail" placeholder="E-mail">
+  </mat-form-field>
 
-  <!-- Password -->
-  <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
+  <mat-form-field appearance="outline" style="width: 100%;">
+    <mat-label>Lozinka</mat-label>
+    <input matInput type="password" id="defaultLoginFormPassword" placeholder="Lozinka">
+  </mat-form-field>
 
   <div class="d-flex justify-content-around">
     <div>
-      <!-- Remember me -->
-      <mdb-checkbox [default]="true">Remember me</mdb-checkbox>
-    </div>
-    <div>
-      <!-- Forgot password -->
-      <a href="">Forgot password?</a>
+      <a class="sifra-link">Zaboravili ste lozinku?</a>
     </div>
   </div>
 
   <!-- Sign in button -->
-  <button mdbBtn color="info" block="true" class="my-4" type="submit">Sign in</button>
+  <button mdbBtn color="info" block="true" class="my-4" type="submit">Prijava</button>
 
   <!-- Register -->
-  <p>Not a member?
-    <a href="">Register</a>
+  <p>Nemate nalog?
+    <a class="registracija-link" (click)="predjiNaRegistraciju()">Registracija</a>
   </p>
 
-  <!-- Social login -->
-  <p>or sign in with:</p>
-
-  <a type="button" class="light-blue-text mx-2">
-    <mdb-icon fab icon="facebook"></mdb-icon>
-  </a>
-  <a type="button" class="light-blue-text mx-2">
-    <mdb-icon fab icon="twitter"></mdb-icon>
-  </a>
-  <a type="button" class="light-blue-text mx-2">
-    <mdb-icon fab icon="linkedin"></mdb-icon>
-  </a>
-  <a type="button" class="light-blue-text mx-2">
-    <mdb-icon fab icon="github"></mdb-icon>
-  </a>
-
 </form>
-<!-- Default form login -->
