Dijalozi za prijavi i registrovanje na sistem.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <span>Rezultati sportova</span>
+  <a href="#" class="pocetna-link">Rezultati sportova</a>
   <span class="example-spacer"></span>
   <span>Prijava</span>
   <button mat-icon-button class="example-icon favorite-icon" (click)="otvoriPrijavu()">
