--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,33 +6,23 @@
   margin-right: 8px;
 }
 
-.zemlja-item {
-  font-size: 20px;
-  padding-top: 10px;
-}
-
-.liga-item {
-  padding-left: 10px;
-  padding-top: 5px;
-  font-size: 15px;
-}
-
-a.zemlja-link:link, a.liga-link:link
+a.pocetna-link:link
 {
   color: black;
   text-decoration: none;
 }
-a.zemlja-link:visited, a.liga-link:visited
+a.pocetna-link:visited
 {
   color: black;
   text-decoration: none;
 }
-a.zemlja-link:hover, a.liga-link:hover
+a.pocetna-link:hover
 {
   color: gray;
   text-decoration: underline;
+  cursor: pointer;
 }
-a.zemlja-link:active, a.liga-link:active
+a.pocetna-link:active
 {
   color: black;
   text-decoration: none;
