Prikaz klubova iz odabrane lige.

--- a/src/app/fudbal/fudbal.component.css
+++ b/src/app/fudbal/fudbal.component.css
@@ -31,10 +31,16 @@ a.zemlja-link:visited, a.liga-link:visited {
   text-decoration: none;
 }
 
-a.zemlja-link:hover, a.liga-link:hover {
+a.zemlja-link:hover {
   color: gray;
   text-decoration: underline;
   cursor: default;
+}
+
+a.liga-link:hover {
+  color: gray;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 a.zemlja-link:active, a.liga-link:active {
