--- a/src/app/fudbal/fudbal.component.html
+++ b/src/app/fudbal/fudbal.component.html
@@ -7,7 +7,7 @@
           <div class="zemlja-item border-bottom" *ngFor="let zemlja of zemlje">
             <a class="zemlja-link" (click)="prikaziLige(zemlja)">{{zemlja.naziv}}</a>
             <div *ngFor="let liga of zemlja.lige" [hidden]="!zemlja.prikazaneLige" class="liga-item">
-              <a class="liga-link">{{liga.naziv}}</a>
+              <a class="liga-link" (click)="prikaziKluboveIzLige(liga)">{{liga.naziv}}</a>
             </div>
           </div>
         </div>
@@ -46,7 +46,7 @@
             <mat-form-field appearance="fill">
               <mat-label>Izaberite datum</mat-label>
               <input matInput [matDatepicker]="picker" [formControl]="date" disabled
-                     (dateChange)="dobaviRezultateZaDatum($event)">
+                     (dateChange)="dobaviRezultateZaDatum($event)" [(ngModel)]="selektovaniDatum">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker color="warn" disabled="false"></mat-datepicker>
             </mat-form-field>
