Prikaz igraca u formaciji. Dodatne info o igracima.

--- a/src/app/prikaz-igraca/prikaz-igraca.component.scss
+++ b/src/app/prikaz-igraca/prikaz-igraca.component.scss
@@ -1,6 +1,11 @@
+.bg {
+  background-image: -webkit-radial-gradient(ellipse, #2a437c 0, #10203b 100%);
+}
+
 * {
   box-sizing: border-box;
 }
+
 html,
 body {
   width: 100%;
@@ -9,24 +14,30 @@ body {
   padding: 0;
   margin: 0;
 }
+
 .test {
   overflow: hidden;
 }
+
 .velocity-animating {
   -webkit-transition: none !important;
   transition: none !important;
 }
+
 body {
   background-image: -webkit-radial-gradient(ellipse, #2a437c 0, #10203b 100%);
   font-family: 'Open Sans', helvetica, arial, sans-serif;
 }
+
 main {
   opacity: 0;
 }
+
 .test {
   overflow: hidden;
   height: 500px;
 }
+
 .static {
   top: 0;
   left: 0;
@@ -36,6 +47,7 @@ main {
   padding: 0;
   z-index: 3;
 }
+
 .static h1 {
   margin: 50px 0 15px;
   font-size: 50px;
@@ -45,6 +57,7 @@ main {
   letter-spacing: -3px;
   font-family: montserrat;
 }
+
 .static p {
   font-weight: 300;
   opacity: 0.4;
@@ -52,6 +65,7 @@ main {
   font-size: 16px;
   color: #7f98d3;
 }
+
 .loading {
   position: absolute;
   top: 0;
@@ -69,6 +83,7 @@ main {
   text-align: center;
   opacity: 0;
 }
+
 .team-list {
   position: absolute;
   left: 40px;
@@ -76,15 +91,18 @@ main {
   list-style: none;
   display: none;
 }
+
 .team-list li:first-child {
   color: #fff;
   font-weight: bold;
 }
+
 .team-list li {
   font-size: 1.4rem;
   margin: 0 0 10px;
   color: #7f98d3;
 }
+
 .stage {
   position: absolute;
   width: 50%;
@@ -98,6 +116,7 @@ main {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
 .world {
   position: absolute;
   top: 130px;
@@ -113,14 +132,17 @@ main {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
 .world.flipped {
   -webkit-transform: translateZ(-210px) rotateY(180deg);
   transform: translateZ(-210px) rotateY(180deg);
 }
+
 .world.switched {
   -webkit-transform: translateZ(250px) rotateY(30deg) translateX(60px) translateY(-200px);
   transform: translateZ(250px) rotateY(30deg) translateX(60px) translateY(-200px);
 }
+
 .switch-btn {
   display: inline-block;
   padding: 6px 15px;
@@ -134,24 +156,30 @@ main {
   -webkit-transition: all 0.15s;
   transition: all 0.15s;
 }
+
 .switch-btn.disabled {
   background: #7f98d3;
   color: #2a437c;
   cursor: default;
 }
+
 .switch-btn.disabled:hover {
   color: #2a437c;
 }
+
 .switch-btn:hover {
   color: #fff;
 }
+
 .switch-btn:first-child {
   border-radius: 10px 0 0 10px;
   border-right: none;
 }
+
 .switch-btn:last-child {
   border-radius: 0 10px 10px 0;
 }
+
 .team {
   position: absolute;
   top: 0;
@@ -161,6 +189,7 @@ main {
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
 }
+
 .terrain {
   position: absolute;
   top: 0;
@@ -170,6 +199,7 @@ main {
   -webkit-transform-style: inherit;
   transform-style: inherit;
 }
+
 .field {
   position: absolute;
   top: 0;
@@ -186,6 +216,7 @@ main {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
 .field--alt {
   display: block;
   width: 80%;
@@ -196,35 +227,42 @@ main {
   opacity: 0.3;
   box-shadow: 0 0 40px 30px #000;
 }
+
 .field__texture {
   width: 100%;
   height: 100%;
   position: absolute;
   z-index: 3;
 }
+
 .field__texture.field__texture--gradient {
-  background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,0.2), transparent);
-  background-image: linear-gradient(to top, rgba(0,0,0,0.2), transparent);
+  background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.2), transparent);
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.2), transparent);
   z-index: 4;
 }
+
 .flipped .field__texture.field__texture--gradient {
   opacity: 0;
 }
+
 .field__texture.field__texture--gradient-b {
   opacity: 0;
-  background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.2), transparent);
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.2), transparent);
+  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.2), transparent);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), transparent);
   z-index: 4;
 }
+
 .flipped .field__texture.field__texture--gradient-b {
   opacity: 1;
 }
+
 .texture .field__texture.field__texture--grass {
   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/215059/grass2.png");
   background-repeat: repeat;
   background-size: 75px 75px;
   background-position: -20px -20px;
 }
+
 .field__side {
   position: absolute;
   top: 420px;
@@ -238,9 +276,11 @@ main {
   background-color: #f7f7f7;
   z-index: 9;
 }
+
 .texture .field__side {
   background-color: #000;
 }
+
 .texture .field__side:after {
   content: "";
   top: 0;
@@ -254,6 +294,7 @@ main {
   background-size: 75px 75px;
   background-position: -20px -20px;
 }
+
 .field__side.field__side--left,
 .field__side.field__side--right {
   top: 0;
@@ -265,36 +306,42 @@ main {
   -webkit-transform: rotateX(90deg) rotateY(-90deg) translateZ(0);
   transform: rotateX(90deg) rotateY(-90deg) translateZ(0);
 }
+
 .field__side.field__side--right {
   left: auto;
   right: 0;
 }
+
 .field__side.field__side--back {
   -webkit-transform: rotateX(180deg) translateZ(420px);
   transform: rotateX(180deg) translateZ(420px);
 }
+
 .field__line {
   position: absolute;
   width: 100%;
   height: 3px;
   z-index: 4;
 }
+
 .field__line--goal {
   width: 16%;
   height: 6%;
-  border: solid 3px rgba(255,255,255,0.5);
+  border: solid 3px rgba(255, 255, 255, 0.5);
   border-bottom: none;
   left: 0;
   right: 0;
   margin: auto;
   bottom: 4%;
 }
+
 .field__line--goal--far {
   top: 4%;
   bottom: auto;
-  border: solid 3px rgba(255,255,255,0.5);
+  border: solid 3px rgba(255, 255, 255, 0.5);
   border-top: none;
 }
+
 .field__line--penalty-arc {
   width: 20%;
   height: 20%;
@@ -304,6 +351,7 @@ main {
   right: 0;
   margin: auto;
 }
+
 .field__line--penalty-arc:after {
   position: absolute;
   top: 75%;
@@ -313,50 +361,57 @@ main {
   content: ' ';
   display: block;
   border-radius: 50% 50% 0 0;
-  border: solid 3px rgba(255,255,255,0.5);
+  border: solid 3px rgba(255, 255, 255, 0.5);
   border-bottom: none;
   box-sizing: border-box;
 }
+
 .field__line--penalty-arc--far {
   bottom: auto;
   top: 20%;
 }
+
 .field__line--penalty-arc--far:after {
   bottom: 75%;
   top: auto;
-  border: solid 3px rgba(255,255,255,0.5);
+  border: solid 3px rgba(255, 255, 255, 0.5);
   border-top: none;
   border-radius: 0 0 50% 50%;
 }
+
 .field__line--penalty {
   width: 44%;
   height: 16%;
-  border: solid 3px rgba(255,255,255,0.5);
+  border: solid 3px rgba(255, 255, 255, 0.5);
   border-bottom: none;
   left: 0;
   right: 0;
   margin: auto;
   bottom: 4%;
 }
+
 .field__line--penalty--far {
   top: 4%;
   bottom: auto;
-  border: solid 3px rgba(255,255,255,0.5);
+  border: solid 3px rgba(255, 255, 255, 0.5);
   border-top: none;
 }
+
 .field__line--outline {
   width: 92%;
   height: 92%;
   top: 4%;
   left: 4%;
-  border: solid 3px rgba(255,255,255,0.5);
+  border: solid 3px rgba(255, 255, 255, 0.5);
 }
+
 .field__line--mid {
   top: 50%;
   width: 92%;
   left: 4%;
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
+
 .field__line--circle {
   width: 20%;
   height: 20%;
@@ -365,9 +420,10 @@ main {
   right: 0;
   bottom: 0;
   margin: auto;
-  border: solid 3px rgba(255,255,255,0.5);
+  border: solid 3px rgba(255, 255, 255, 0.5);
   border-radius: 50%;
 }
+
 .debug-btn {
   position: absolute;
   right: 40px;
@@ -380,13 +436,16 @@ main {
   text-decoration: none;
   line-height: 20px;
 }
+
 .debug-btn:hover {
   opacity: 1;
-  background-color: rgba(255,255,255,0.1);
+  background-color: rgba(255, 255, 255, 0.1);
 }
+
 .debug-btn.debug-btn--load {
   top: 80px;
 }
+
 .player {
   position: absolute;
   height: 88px;
@@ -404,6 +463,7 @@ main {
   transition: all 0.2s;
   cursor: pointer;
 }
+
 .player .player__placeholder {
   position: absolute;
   opacity: 0;
@@ -416,12 +476,14 @@ main {
   right: 0;
   margin: auto;
   border-radius: 50%;
-  background-color: rgba(0,0,0,0.2);
+  background-color: rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
+
 .player.active .player__placeholder {
   opacity: 1;
 }
+
 .player .player__card {
   position: absolute;
   bottom: 26px;
@@ -436,6 +498,7 @@ main {
   border-radius: 4px;
   z-index: 2;
 }
+
 .player .player__card:after {
   position: absolute;
   display: block;
@@ -451,6 +514,7 @@ main {
   top: auto;
   z-index: 3;
 }
+
 .player .player__card i {
   position: absolute;
   top: 0px;
@@ -464,9 +528,11 @@ main {
   -webkit-transition: all 0.15s;
   transition: all 0.15s;
 }
+
 .player .player__card i:hover {
   opacity: 0.6;
 }
+
 .player .player__card h3 {
   text-align: center;
   font-weight: normal;
@@ -482,6 +548,7 @@ main {
   border-radius: 4px 4px 0 0;
   background-color: #192642;
 }
+
 .player .player__card h3 span:first-child {
   display: inline-block;
   height: 27px;
@@ -492,15 +559,18 @@ main {
   opacity: 0.4;
   font-size: 18px;
 }
+
 .player .player__card h3 span:last-child {
   font-size: 14px;
   opacity: 0.4;
 }
+
 .player .player__card p {
   color: #777;
   font-syle: italic;
   text-align: center;
 }
+
 .player .player__card .player__card__list {
   padding: 10px 0;
   font-size: 14px;
@@ -508,6 +578,7 @@ main {
   overflow: auto;
   text-align: center;
 }
+
 .player .player__card .player__card__list li {
   display: inline-block;
   white-space: nowrap;
@@ -517,15 +588,18 @@ main {
   padding-left: 20px;
   color: #333;
 }
+
 .player .player__card .player__card__list li span {
   font-size: 12px;
   text-transform: uppercase;
   color: #aaa;
 }
+
 .player .player__card .player__card__list li:first-child {
   padding-left: 0;
   border-left: none;
 }
+
 .player .player__card .player__card__list--last {
   position: absolute;
   width: 100%;
@@ -537,6 +611,7 @@ main {
   border-radius: 0 0 6px 6px;
   overflow: hidden;
 }
+
 .player .player__card .player__card__list--last li {
   width: 50%;
   padding: 10px 0 20px 0;
@@ -544,12 +619,15 @@ main {
   font-size: 28px;
   line-height: 22px;
 }
+
 .player .player__card .player__card__list--last li:last-child {
   border-left: solid 1px #ddd;
 }
+
 .player * {
   pointer-events: none;
 }
+
 .player .player__img {
   position: absolute;
   top: 0;
@@ -566,12 +644,14 @@ main {
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
+
 .player .player__img img {
   width: 100%;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   display: block;
 }
+
 .player .player__label {
   position: absolute;
   height: 20px;
@@ -594,21 +674,26 @@ main {
   z-index: 2;
   pointer-events: none;
 }
+
 .player .player__label span {
-  background-color: rgba(16,20,30,0.9);
+  background-color: rgba(16, 20, 30, 0.9);
   color: #fff;
   font-size: 11px;
   padding: 3px 10px 2px 10px;
   border-radius: 10px;
   text-transform: upppercase;
 }
+
 .player:hover .player__img {
   opacity: 1;
 }
+
 .player:hover .player__label {
   opacity: 1;
 }
+
 .texture .player {
   background-size: 100% auto;
 }
+
 
