Prikaz igraca u formaciji. Dodatne info o igracima.

--- a/src/app/fudbal/fudbal.component.css
+++ b/src/app/fudbal/fudbal.component.css
@@ -47,3 +47,8 @@ a.zemlja-link:active, a.liga-link:active {
   color: black;
   text-decoration: none;
 }
+
+td {
+  text-align: left;
+  width: 25%;
+}
