--- a/src/app/prikaz-igraca/prikaz-igraca.component.html
+++ b/src/app/prikaz-igraca/prikaz-igraca.component.html
@@ -22,7 +22,7 @@
                    (click)="prikaziDodatneInfoOIgracu(igrac)"
                    style="opacity: 1; display: block; transform: translateX(160px) translateZ(-190px) translateY(0px);">
                 <div class="player__placeholder"></div>
-                <div class="player__card"><h3>{{igrac.ime}}</h3>
+                <div class="player__card"><h3>{{igrac.prezime}}</h3>
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
@@ -31,7 +31,7 @@
                 </div>
                 <div class="player__label"
                      style="display: block; transform: translateX(0px) translateY(0px); opacity: 1;">
-                  <span>{{igrac.ime}}</span>
+                  <span>{{igrac.prezime}}</span>
                 </div>
                 <div class="player__img"><img src="../../assets/images/desnivezni.jpg">
                 </div>
@@ -42,7 +42,7 @@
                    (click)="prikaziDodatneInfoOIgracu(igrac)"
                    style="opacity: 1; display: block; transform: translateX(0px) translateZ(-190px) translateY(0px);">
                 <div class="player__placeholder"></div>
-                <div class="player__card"><h3>{{igrac.ime}}</h3>
+                <div class="player__card"><h3>{{igrac.prezime}}</h3>
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="player__label"
                      style="display: block; transform: translateX(0px) translateY(0px); opacity: 1;">
-                  <span>{{igrac.ime}}</span>
+                  <span>{{igrac.prezime}}</span>
                 </div>
                 <div class="player__img"><img src="../../assets/images/centarfor.jpg">
                 </div>
@@ -62,7 +62,7 @@
                    (click)="prikaziDodatneInfoOIgracu(igrac)"
                    style="opacity: 1; display: block; transform: translateX(-160px) translateZ(-190px) translateY(0px);">
                 <div class="player__placeholder"></div>
-                <div class="player__card"><h3>{{igrac.ime}}</h3>
+                <div class="player__card"><h3>{{igrac.prezime}}</h3>
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
@@ -71,7 +71,7 @@
                 </div>
                 <div class="player__label"
                      style="display: block; transform: translateX(0px) translateY(0px); opacity: 1;">
-                  <span>{{igrac.ime}}</span>
+                  <span>{{igrac.prezime}}</span>
                 </div>
                 <div class="player__img"><img src="../../assets/images/levivezni.jpg">
                 </div>
@@ -82,7 +82,7 @@
                    (click)="prikaziDodatneInfoOIgracu(igrac)"
                    style="opacity: 1; display: block; transform: translateX(150px) translateZ(50px) translateY(0px);">
                 <div class="player__placeholder"></div>
-                <div class="player__card"><h3>{{igrac.ime}}</h3>
+                <div class="player__card"><h3>{{igrac.prezime}}</h3>
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="player__label"
                      style="display: block; transform: translateX(0px) translateY(0px); opacity: 1;">
-                  <span>{{igrac.ime}}</span>
+                  <span>{{igrac.prezime}}</span>
                 </div>
                 <div class="player__img"><img src="../../assets/images/vezni.jpg">
                 </div>
@@ -102,7 +102,7 @@
                    (click)="prikaziDodatneInfoOIgracu(igrac)"
                    style="opacity: 1; display: block; transform: translateZ(100px) translateX(0px) translateY(0px);">
                 <div class="player__placeholder"></div>
-                <div class="player__card"><h3>{{igrac.ime}}</h3>
+                <div class="player__card"><h3>{{igrac.prezime}}</h3>
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="player__label"
                      style="display: block; transform: translateX(0px) translateY(0px); opacity: 1;">
-                  <span>{{igrac.ime}}</span></div>
+                  <span>{{igrac.prezime}}</span></div>
                 <div class="player__img"><img
                   src="../../assets/images/vezni.jpg"></div>
               </div>
@@ -121,7 +121,7 @@
                    (click)="prikaziDodatneInfoOIgracu(igrac)"
                    style="opacity: 1; display: block; transform: translateX(-150px) translateZ(50px) translateY(0px);">
                 <div class="player__placeholder"></div>
-                <div class="player__card"><h3>{{igrac.ime}}</h3>
+                <div class="player__card"><h3>{{igrac.prezime}}</h3>
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="player__label"
                      style="display: block; transform: translateX(0px) translateY(0px); opacity: 1;">
-                  <span>{{igrac.ime}}</span>
+                  <span>{{igrac.prezime}}</span>
                 </div>
                 <div class="player__img"><img src="../../assets/images/vezni.jpg">
                 </div>
@@ -141,7 +141,7 @@
                    (click)="prikaziDodatneInfoOIgracu(igrac)"
                    style="opacity: 1; display: block; transform: translateX(-200px) translateZ(180px) translateY(0px);">
                 <div class="player__placeholder"></div>
-                <div class="player__card"><h3>{{igrac.ime}}</h3>
+                <div class="player__card"><h3>{{igrac.prezime}}</h3>
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="player__label"
                      style="display: block; transform: translateX(0px) translateY(0px); opacity: 1;">
-                  <span>{{igrac.ime}}</span>
+                  <span>{{igrac.prezime}}</span>
                 </div>
                 <div class="player__img"><img src="../../assets/images/levibek.jpg">
                 </div>
@@ -161,7 +161,7 @@
                    (click)="prikaziDodatneInfoOIgracu(igrac)"
                    style="opacity: 1; display: block; transform: translateX(200px) translateZ(180px) translateY(0px);">
                 <div class="player__placeholder"></div>
-                <div class="player__card"><h3>{{igrac.ime}}</h3>
+                <div class="player__card"><h3>{{igrac.prezime}}</h3>
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
@@ -170,7 +170,7 @@
                 </div>
                 <div class="player__label"
                      style="display: block; transform: translateX(0px) translateY(0px); opacity: 1;">
-                  <span>{{igrac.ime}}</span></div>
+                  <span>{{igrac.prezime}}</span></div>
                 <div class="player__img"><img src="../../assets/images/desnibek.jpg">
                 </div>
               </div>
@@ -180,7 +180,7 @@
                    (click)="prikaziDodatneInfoOIgracu(igrac)"
                    style="opacity: 1; display: block; transform: translateX(100px) translateZ(300px) translateY(0px);">
                 <div class="player__placeholder"></div>
-                <div class="player__card"><h3>{{igrac.ime}}</h3>
+                <div class="player__card"><h3>{{igrac.prezime}}</h3>
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
@@ -189,7 +189,7 @@
                 </div>
                 <div class="player__label"
                      style="display: block; transform: translateX(0px) translateY(0px); opacity: 1;">
-                  <span>{{igrac.ime}}</span></div>
+                  <span>{{igrac.prezime}}</span></div>
                 <div class="player__img"><img src="../../assets/images/stoper.jpg">
                 </div>
               </div>
@@ -199,7 +199,7 @@
                    (click)="prikaziDodatneInfoOIgracu(igrac)"
                    style="opacity: 1; display: block; transform: translateX(-100px) translateZ(300px) translateY(0px);">
                 <div class="player__placeholder"></div>
-                <div class="player__card"><h3>{{igrac.ime}}</h3>
+                <div class="player__card"><h3>{{igrac.prezime}}</h3>
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
@@ -208,7 +208,7 @@
                 </div>
                 <div class="player__label"
                      style="display: block; transform: translateX(0px) translateY(0px); opacity: 1;">
-                  <span>{{igrac.ime}}</span></div>
+                  <span>{{igrac.prezime}}</span></div>
                 <div class="player__img"><img src="../../assets/images/stoper.jpg"></div>
               </div>
 
@@ -217,7 +217,7 @@
                    (click)="prikaziDodatneInfoOIgracu(igrac)"
                    style="opacity: 1; display: block; transform: translateZ(410px) translateX(0px) translateY(0px);">
                 <div class="player__placeholder"></div>
-                <div class="player__card"><h3>{{igrac.ime}}</h3>
+                <div class="player__card"><h3>{{igrac.prezime}}</h3>
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
@@ -226,7 +226,7 @@
                 </div>
                 <div class="player__label"
                      style="display: block; transform: translateX(0px) translateY(0px); opacity: 1;">
-                  <span>{{igrac.ime}}</span></div>
+                  <span>{{igrac.prezime}}</span></div>
                 <div class="player__img"><img src="../../assets/images/golman.jpg">
                 </div>
               </div>
