--- a/src/app/fudbal/fudbal.component.html
+++ b/src/app/fudbal/fudbal.component.html
@@ -64,7 +64,7 @@
                   </tr>
                   </thead>
                   <tbody *ngFor="let rezultat of fudbalskiRezultati" style="text-align: center;">
-                  <tr *ngIf="rezultat.domacin.zemlja.id == zemlja.id && rezultat.liga.id == liga.id">
+                  <tr *ngIf="rezultat.domacin.zemlja.id == zemlja.id && rezultat.liga.id == liga.id" (click)="otvoriDodatniInfo(rezultat)">
                     <td>{{(rezultat.vremeOdrzavanjaUtakmice[3] < 10 ? '0' : '') + rezultat.vremeOdrzavanjaUtakmice[3]
                     + ' : ' + (rezultat.vremeOdrzavanjaUtakmice[4] < 10 ? '0' : '') + rezultat.vremeOdrzavanjaUtakmice[4]}}</td>
                     <td>{{rezultat.domacin.naziv}}</td>
