--- a/src/app/prikaz-dodatnih-informacija/prikaz-dodatnih-informacija.component.html
+++ b/src/app/prikaz-dodatnih-informacija/prikaz-dodatnih-informacija.component.html
@@ -4,8 +4,9 @@
     <div class="col-6">
       <mat-card class="example-card" style="color: white; background-color: mediumpurple;">
         <mat-card-header>
-          <mat-card-title>Domacin</mat-card-title>
+          <mat-card-title>{{rezultat.domacin.naziv}}</mat-card-title>
         </mat-card-header>
+        <mat-card-footer>Golovi : {{rezultat.goloviDomacin}}</mat-card-footer>
       </mat-card>
       <br>
       <label>Posed : </label>
@@ -31,13 +32,38 @@
         <span>{{rezultat.informacija.suteviDomacin}}
           </span>
       </div>
+      <br>
+      <label>Broj žutih kartona : </label>
+      <div style="position: relative">
+        <mat-progress-bar
+          class="example-margin"
+          color="warn"
+          mode="determinate"
+          [value]="(rezultat.informacija.brojZutihKartonaDomacin * 100) / (rezultat.informacija.brojZutihKartonaDomacin + rezultat.informacija.brojZutihKartonaGost)">
+        </mat-progress-bar>
+        <span>{{rezultat.informacija.brojZutihKartonaDomacin}}
+          </span>
+      </div>
+      <br>
+      <label>Broj crvenih kartona : </label>
+      <div style="position: relative">
+        <mat-progress-bar
+          class="example-margin"
+          color="warn"
+          mode="determinate"
+          [value]="(rezultat.informacija.brojCrvenihKartonaDomacin * 100) / (rezultat.informacija.brojCrvenihKartonaDomacin + rezultat.informacija.brojCrvenihKartonaGost)">
+        </mat-progress-bar>
+        <span>{{rezultat.informacija.brojCrvenihKartonaDomacin}}
+          </span>
+      </div>
     </div>
 
     <div class="col-6">
       <mat-card class="example-card" style="color: white; background-color: mediumpurple;">
         <mat-card-header>
-          <mat-card-title>Gost</mat-card-title>
+          <mat-card-title>{{rezultat.gost.naziv}}</mat-card-title>
         </mat-card-header>
+        <mat-card-footer>Golovi : {{rezultat.goloviGost}}</mat-card-footer>
       </mat-card>
       <br>
       <label>Posed : </label>
@@ -61,6 +87,30 @@
           [value]="(rezultat.informacija.suteviGost * 100) / (rezultat.informacija.suteviDomacin + rezultat.informacija.suteviGost)">
         </mat-progress-bar>
         <span>{{rezultat.informacija.suteviGost}}
+          </span>
+      </div>
+      <br>
+      <label>Broj žutih kartona : </label>
+      <div style="position: relative">
+        <mat-progress-bar
+          class="example-margin"
+          color="accent"
+          mode="determinate"
+          [value]="(rezultat.informacija.brojZutihKartonaGost * 100) / (rezultat.informacija.brojZutihKartonaDomacin + rezultat.informacija.brojZutihKartonaGost)">
+        </mat-progress-bar>
+        <span>{{rezultat.informacija.brojZutihKartonaGost}}
+          </span>
+      </div>
+      <br>
+      <label>Broj crvenih kartona : </label>
+      <div style="position: relative">
+        <mat-progress-bar
+          class="example-margin"
+          color="accent"
+          mode="determinate"
+          [value]="(rezultat.informacija.brojCrvenihKartonaGost * 100) / (rezultat.informacija.brojCrvenihKartonaDomacin + rezultat.informacija.brojCrvenihKartonaGost)">
+        </mat-progress-bar>
+        <span>{{rezultat.informacija.brojCrvenihKartonaGost}}
           </span>
       </div>
     </div>
