Prikaz dodatnih rezultata vezanih za rezultat.

--- a/src/app/prikaz-igraca/prikaz-igraca.component.html
+++ b/src/app/prikaz-igraca/prikaz-igraca.component.html
@@ -176,7 +176,7 @@
               </div>
 
               <!--desni stoper-->
-              <div class="js-player player" data-x="100" data-y="300" *ngIf="igrac.pozicija == 'DESNI_ŠTOPER'"
+              <div class="js-player player" data-x="100" data-y="300" *ngIf="igrac.pozicija == 'DESNI_STOPER'"
                    (click)="prikaziDodatneInfoOIgracu(igrac)"
                    style="opacity: 1; display: block; transform: translateX(100px) translateZ(300px) translateY(0px);">
                 <div class="player__placeholder"></div>
@@ -195,7 +195,7 @@
               </div>
 
               <!--levi stoper-->
-              <div class="js-player player" data-x="-100" data-y="300" *ngIf="igrac.pozicija == 'LEVI_ŠTOPER'"
+              <div class="js-player player" data-x="-100" data-y="300" *ngIf="igrac.pozicija == 'LEVI_STOPER'"
                    (click)="prikaziDodatneInfoOIgracu(igrac)"
                    style="opacity: 1; display: block; transform: translateX(-100px) translateZ(300px) translateY(0px);">
                 <div class="player__placeholder"></div>
